<?xml version="1.0" encoding="utf-8"?>
<resources
    
    translatable="false">
	<string name="noties">温馨提示：根据海关规定需要验证物品收件人的身份证信息，错误信息将导致包裹被卡关，请务......</string>
    <string name="app_name">斑马海购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="manage_address">地址管理</string>
    <string name="select_address">选择地址</string>
    <string name="add_address">添加地址</string>
    <string name="alter_address">修改地址</string>
    <string name="name">姓名</string>
    <string name="telephone">电话</string>
    <string name="downtown">省市区</string>
    <string name="detailed_address">详细地址</string>
    <string name="postcode">邮编</string>
    <string name="save">保存</string>
    <string name="password">密码</string>
    <string name="username">请输入用户名</string>
    <string name="registered">新用户注册</string>
    <string name="phone_number">仅支持手机号注册</string>
    <string name="check_code">验证码</string>
    <string name="et_invite_code">邀请人手机号（可不填）</string>
	<string name="password1">密码</string>
	<string name="password2">确认密码</string>
	<string name="prompt">提示</string>
	<string name="cancel">取消</string>
	<string name="ok">确定</string>
	<string name="delete_address_or_not">是否删除收货地址？</string>
	<string name="confirm_order">订单确认</string>
	<string name="default_address">设为默认地址</string>
	
	<string name="load_ing">加载中···</string>
   <!-- <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>  -->
</resources>
