<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/boder"
            android:orientation="vertical"
            android:padding="1dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/add_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dip"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/telephone"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/telephone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/downtown"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <TextView
                    android:id="@+id/downtown"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:paddingRight="10dip"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray"
                android:paddingLeft="10dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/detailed_address"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/detailed_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray"
                android:paddingLeft="10dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/postcode"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/postcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray"
                android:paddingLeft="10dip" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dip"
                android:paddingLeft="5dip"
                android:paddingTop="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="身份证"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <EditText
                    android:id="@+id/id_card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/gray"
                    android:textSize="16dip" />
            </LinearLayout>
             <View
                android:id="@+id/default_address_line"
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dip"
                android:background="@color/lightgray"
                android:paddingLeft="10dip"
                android:visibility="gone"
                 />

            <LinearLayout
                android:id="@+id/default_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="8dip"
                android:paddingLeft="5dip"
                android:paddingTop="8dip"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/default_address"
                    android:textColor="@color/black"
                    android:textSize="15dip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dip" >

                    <CheckBox
                        android:id="@+id/default_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_gv" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/boot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" >

        <LinearLayout
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/delete"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/remove" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:text="删除"
                android:textSize="10dip" />
        </LinearLayout>

        <View
            android:id="@+id/kong"
            android:layout_width="100dip"
            android:layout_height="35dip"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_address"
            android:layout_width="50dip"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/bg_home_but"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>